Working locally using docker compose
- 3 hour checkpoint
